// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot — empty states > NewSessionDialog: no workflows 1`] = `
<dialog
  aria-describedby="_r_0_-desc"
  aria-labelledby="_r_0_-title"
  class="overflow-hidden rounded-lg border border-border bg-background p-0 text-foreground shadow-xl"
  open=""
>
  <div
    class="flex flex-col max-h-[85vh] min-h-[28rem] w-[44rem]"
  >
    <header
      class="flex shrink-0 items-start justify-between gap-4 px-6 py-4"
    >
      <div
        class="flex min-w-0 flex-col gap-1"
      >
        <h2
          class="text-sm font-semibold tracking-tight text-foreground"
          id="_r_0_-title"
        >
          New session
        </h2>
        <p
          class="text-xs leading-relaxed text-muted-foreground"
          id="_r_0_-desc"
        >
          Creates a worktree on a fresh branch. Configure workflow and agents from the session panel afterwards.
        </p>
      </div>
      <button
        aria-label="close"
        class="-mr-1 -mt-1 flex h-7 w-7 shrink-0 items-center justify-center rounded-md text-muted-foreground motion-safe:transition-colors hover:bg-muted hover:text-foreground"
        type="button"
      >
        <span
          aria-hidden="true"
          class="text-base leading-none"
        >
          ×
        </span>
      </button>
    </header>
    <div
      aria-orientation="horizontal"
      class="h-px w-full bg-gradient-to-r from-transparent via-border-soft to-transparent"
      role="separator"
    />
    <div
      class="flex min-h-0 flex-1 flex-col overflow-y-auto text-sm gap-4 px-6 py-5"
    >
      <div
        class="flex flex-col gap-7"
      >
        <section
          class="flex flex-col gap-2.5"
        >
          <header
            class="flex items-start gap-2.5"
          >
            <span
              class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-md bg-primary/10"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-target text-primary"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="2"
                />
              </svg>
            </span>
            <div
              class="flex flex-col gap-0.5"
            >
              <h3
                class="text-sm font-semibold text-foreground"
              >
                Goal
              </h3>
              <p
                class="text-2xs leading-relaxed text-muted-foreground"
              >
                What this session should accomplish. Be specific — agents lean on it for context.
              </p>
            </div>
          </header>
          <div>
            <textarea
              class="w-full rounded-md border border-border/30 bg-background px-2.5 py-2 text-sm leading-5 text-foreground shadow-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary/40 focus-visible:ring-1 focus-visible:ring-primary/15 disabled:opacity-50 resize-none transition-[border-color,box-shadow] focus-visible:shadow-md"
              placeholder="Refactor auth domain to extract token validation into a shared module…"
              style="overflow-y: hidden;"
            />
          </div>
        </section>
        <section
          class="flex flex-col gap-2.5"
        >
          <header
            class="flex items-start gap-2.5"
          >
            <span
              class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-md bg-success/10"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-git-branch text-success"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 6a9 9 0 0 0-9 9V3"
                />
                <circle
                  cx="18"
                  cy="6"
                  r="3"
                />
                <circle
                  cx="6"
                  cy="18"
                  r="3"
                />
              </svg>
            </span>
            <div
              class="flex flex-col gap-0.5"
            >
              <h3
                class="text-sm font-semibold text-foreground"
              >
                Branch
              </h3>
              <p
                class="text-2xs leading-relaxed text-muted-foreground"
              >
                Each session lives on its own git worktree. Pick a fresh branch or attach to an existing one.
              </p>
            </div>
          </header>
          <div>
            <div
              class="flex flex-col gap-2.5"
            >
              <div
                aria-label="branch source"
                class="inline-flex shrink-0 rounded border border-border bg-background p-0.5"
                role="tablist"
              >
                <button
                  aria-selected="true"
                  class="rounded px-2 py-0.5 text-2xs font-medium motion-safe:transition-colors bg-muted text-foreground shadow-sm"
                  role="tab"
                  type="button"
                >
                  New
                </button>
                <button
                  aria-selected="false"
                  class="rounded px-2 py-0.5 text-2xs font-medium motion-safe:transition-colors text-muted-foreground hover:text-foreground"
                  role="tab"
                  type="button"
                >
                  Existing
                </button>
              </div>
              <div
                class="flex items-center gap-1.5"
              >
                <span
                  class="shrink-0 text-xs text-muted-foreground font-mono"
                >
                  kay/
                </span>
                <input
                  aria-label="Branch slug"
                  autocapitalize="off"
                  autocorrect="off"
                  class="w-full rounded-md border border-border bg-background px-2.5 text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 disabled:opacity-50 h-8 flex-1 font-mono text-sm"
                  placeholder="branch-slug"
                  spellcheck="false"
                  type="text"
                  value=""
                />
                <button
                  aria-label="Generate branch name"
                  class="shrink-0 rounded-md border border-border px-2 py-1.5 text-xs transition-colors cursor-not-allowed text-muted-foreground/30"
                  disabled=""
                  title="Generate from goal"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-wand-sparkles"
                    fill="none"
                    height="13"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="13"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"
                    />
                    <path
                      d="m14 7 3 3"
                    />
                    <path
                      d="M5 6v4"
                    />
                    <path
                      d="M19 14v4"
                    />
                    <path
                      d="M10 2v2"
                    />
                    <path
                      d="M7 8H3"
                    />
                    <path
                      d="M21 16h-4"
                    />
                    <path
                      d="M11 3H9"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      aria-orientation="horizontal"
      class="h-px w-full bg-gradient-to-r from-transparent via-border-soft to-transparent"
      role="separator"
    />
    <footer
      class="flex shrink-0 items-center justify-end gap-2 px-6 py-3"
    >
      <div
        class="flex w-full items-center gap-2"
      >
        <div
          class="flex-1 text-xs text-danger"
        />
        <button
          class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 text-foreground hover:bg-muted h-8 px-3 text-sm"
          type="button"
        >
          Cancel
        </button>
        <button
          class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 bg-primary text-primary-foreground hover:bg-primary/90 h-8 px-3 text-sm"
          disabled=""
          type="button"
        >
          Create session
        </button>
      </div>
    </footer>
  </div>
</dialog>
`;

exports[`snapshot — empty states > NotificationCenter: no notifications 1`] = `
<div
  aria-label="notifications"
  aria-live="polite"
  role="region"
>
  <span
    class="relative inline-flex"
  >
    <button
      aria-label="notifications"
      class="relative flex items-center justify-center rounded p-1.5 motion-safe:transition-colors text-muted-foreground hover:text-foreground hover:bg-muted/50"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-bell"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.268 21a2 2 0 0 0 3.464 0"
        />
        <path
          d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
        />
      </svg>
    </button>
  </span>
</div>
`;

exports[`snapshot — empty states > ProvidersPanel: no providers (store returns []) 1`] = `
<div
  class="flex flex-col gap-3"
>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="text-xs font-semibold text-foreground"
    >
      Providers
    </div>
    <span
      class="relative inline-flex"
    >
      <button
        aria-label="Re-detect installed CLIs"
        class="inline-flex h-7 w-7 items-center justify-center rounded-md text-muted-foreground hover:bg-muted hover:text-foreground disabled:opacity-50"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-rotate-cw"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-9-9c2.52 0 4.93 1 6.74 2.74L21 8"
          />
          <path
            d="M21 3v5h-5"
          />
        </svg>
      </button>
    </span>
  </div>
  <p
    class="text-2xs text-muted-foreground"
  >
    No providers configured
  </p>
  <div
    class="flex items-start gap-1.5 text-2xs text-muted-foreground"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-info mt-0.5 shrink-0"
      fill="none"
      height="11"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="11"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M12 16v-4"
      />
      <path
        d="M12 8h.01"
      />
    </svg>
    <span>
      Sign in once via each provider's CLI (e.g. run
       
      <code
        class="rounded bg-muted px-1"
      >
        claude
      </code>
       in a terminal). Goodboy picks up the credentials.
    </span>
  </div>
</div>
`;

exports[`snapshot — empty states > QuickActionsPopover: no skills / empty items 1`] = `
<div
  class="absolute bottom-full left-0 right-0 z-50 mb-1 overflow-hidden rounded-md border border-border bg-subtle shadow-md"
>
  <p
    class="px-3 py-2 text-xs text-muted-foreground"
  >
    no skills. create one in settings
  </p>
</div>
`;

exports[`snapshot — empty states > SkillsPanel: no skills 1`] = `
<div
  class="flex flex-col gap-3"
>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="text-xs font-semibold text-foreground"
    >
      Skills
    </div>
    <div
      class="flex items-center gap-2"
    >
      <button
        class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 text-foreground hover:bg-muted h-7 px-2.5 text-xs"
        type="button"
      >
        Rescan
      </button>
      <button
        class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 text-foreground hover:bg-muted h-7 px-2.5 text-xs"
        type="button"
      >
        New skill
      </button>
    </div>
  </div>
  <p
    class="text-2xs text-muted-foreground"
  >
    No skills for this workspace. Create one or rescan the workspace directory.
  </p>
</div>
`;

exports[`snapshot — empty states > WorkspacesSidebar: no workspace selected 1`] = `
<div
  class="flex h-full min-h-0 flex-col"
>
  <div
    class="shrink-0"
  >
    <div
      class="shrink-0 px-3 py-3"
      data-tauri-drag-region="false"
    >
      <span
        class="mb-2 flex items-center gap-1.5 px-0.5 text-2xs font-semibold uppercase tracking-[0.08em] text-muted-foreground"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-folder-open text-primary"
          fill="none"
          height="11"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 14 1.5-2.9A2 2 0 0 1 9.24 10H20a2 2 0 0 1 1.94 2.5l-1.54 6a2 2 0 0 1-1.95 1.5H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h3.9a2 2 0 0 1 1.69.9l.81 1.2a2 2 0 0 0 1.67.9H18a2 2 0 0 1 2 2v2"
          />
        </svg>
        Workspaces
        <span
          class="ml-auto font-mono text-[10px] tracking-normal text-muted-foreground/60"
          title="up to 3 workspaces during beta"
        >
          0
          /
          3
        </span>
      </span>
      <div
        class="flex items-center gap-1.5 overflow-x-auto [scrollbar-width:none]"
        data-tauri-drag-region="false"
      >
        <button
          aria-label="add workspace"
          class="flex shrink-0 items-center justify-center rounded border border-dashed px-2 py-1.5 transition-colors border-border-soft text-muted-foreground/60 hover:border-border hover:bg-muted/50 hover:text-muted-foreground"
          data-tauri-drag-region="false"
          title="add workspace"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus"
            fill="none"
            height="12"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    aria-orientation="horizontal"
    class="h-px w-full bg-gradient-to-r from-transparent via-border-soft to-transparent"
    role="separator"
  />
  <div
    class="flex min-h-0 flex-1"
  >
    <div
      class="flex h-full flex-col items-center justify-center gap-4 px-6 py-10 text-center"
    >
      <div
        class="relative"
      >
        <div
          class="absolute inset-0 animate-pulse rounded-full bg-info/10 blur-xl"
        />
        <div
          class="relative flex h-16 w-16 items-center justify-center rounded-full bg-info/10"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-folder-plus text-info"
            fill="none"
            height="26"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="26"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 10v6"
            />
            <path
              d="M9 13h6"
            />
            <path
              d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="flex flex-col gap-1"
      >
        <h3
          class="text-sm font-semibold text-foreground"
        >
          No workspace yet
        </h3>
        <p
          class="max-w-[220px] text-2xs leading-relaxed text-muted-foreground"
        >
          Add a git repo to spin up worktrees and start orchestrating sessions.
        </p>
      </div>
      <button
        class="inline-flex items-center gap-1.5 rounded-md bg-info/15 px-3 py-1.5 text-xs font-medium text-info transition-colors hover:bg-info/25"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus"
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        <span>
          Add workspace
        </span>
      </button>
    </div>
  </div>
  <div
    aria-orientation="horizontal"
    class="h-px w-full bg-gradient-to-r from-transparent via-border-soft to-transparent"
    role="separator"
  />
  <div
    class="flex shrink-0 items-center gap-1.5 px-2.5 py-3"
  >
    <span
      class="flex items-center gap-1.5"
    >
      <svg
        aria-hidden="true"
        class="shrink-0 text-foreground"
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
      >
        <path
          d="M9 8.5Q4.3 7.7 3 11.5Q2.5 15.5 4.8 17.3Q6.8 18.2 7.2 15.3Q6.7 12.5 6.3 10.3Q6 8.9 9 8.5Z"
        />
        <path
          d="M15 8.5Q19.7 7.7 21 11.5Q21.5 15.5 19.2 17.3Q17.2 18.2 16.8 15.3Q17.3 12.5 17.7 10.3Q18 8.9 15 8.5Z"
        />
        <path
          d="M7.5 13a4.5 5.1 0 1 0 9 0a4.5 5.1 0 1 0-9 0ZM9.3 12a1.1 1.1 0 1 0 2.2 0a1.1 1.1 0 1 0-2.2 0ZM12.5 12a1.1 1.1 0 1 0 2.2 0a1.1 1.1 0 1 0-2.2 0ZM10.7 14.4Q12 16.2 13.3 14.4Q12 13.7 10.7 14.4Z"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="text-xs font-semibold tracking-tight text-foreground"
      >
        Goodboy
      </span>
    </span>
    <div
      class="flex-1"
    />
    <button
      aria-label="open onboarding checklist"
      class="inline-flex shrink-0 items-center gap-1 rounded-md border border-border-soft bg-subtle/60 px-1.5 py-1 transition-colors hover:border-border"
      title="Setup — 0 of 5 done"
      type="button"
    >
      <span
        aria-hidden="true"
        class="size-1.5 rounded-full transition-colors bg-border"
      />
      <span
        aria-hidden="true"
        class="size-1.5 rounded-full transition-colors bg-border"
      />
      <span
        aria-hidden="true"
        class="size-1.5 rounded-full transition-colors bg-border"
      />
      <span
        aria-hidden="true"
        class="size-1.5 rounded-full transition-colors bg-border"
      />
      <span
        aria-hidden="true"
        class="size-1.5 rounded-full transition-colors bg-border"
      />
    </button>
    <div
      class="flex items-center gap-0.5"
    >
      <button
        aria-label="collapse sidebar"
        class="flex items-center justify-center rounded p-1.5 text-muted-foreground transition-colors hover:text-foreground hover:bg-muted/50"
        title="collapse sidebar (⌘B)"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-panel-left-close"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M9 3v18"
          />
          <path
            d="m16 15-3-3 3-3"
          />
        </svg>
      </button>
      <button
        aria-label="open spend and pricing"
        class="flex items-center justify-center rounded p-1.5 text-muted-foreground transition-colors hover:text-foreground hover:bg-muted/50"
        title="open spend & pricing"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-dollar-sign"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="12"
            x2="12"
            y1="2"
            y2="22"
          />
          <path
            d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
          />
        </svg>
      </button>
      <button
        aria-label="switch to light mode"
        class="flex items-center justify-center rounded p-1.5 text-muted-foreground transition-colors hover:text-foreground hover:bg-muted/50"
        title="switch to light mode"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sun"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="4"
          />
          <path
            d="M12 2v2"
          />
          <path
            d="M12 20v2"
          />
          <path
            d="m4.93 4.93 1.41 1.41"
          />
          <path
            d="m17.66 17.66 1.41 1.41"
          />
          <path
            d="M2 12h2"
          />
          <path
            d="M20 12h2"
          />
          <path
            d="m6.34 17.66-1.41 1.41"
          />
          <path
            d="m19.07 4.93-1.41 1.41"
          />
        </svg>
      </button>
      <div
        aria-label="notifications"
        aria-live="polite"
        role="region"
      >
        <span
          class="relative inline-flex"
        >
          <button
            aria-label="notifications"
            class="relative flex items-center justify-center rounded p-1.5 motion-safe:transition-colors text-muted-foreground hover:text-foreground hover:bg-muted/50"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-bell"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.268 21a2 2 0 0 0 3.464 0"
              />
              <path
                d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
              />
            </svg>
          </button>
        </span>
      </div>
      <button
        aria-label="open getting started guide"
        class="flex items-center justify-center rounded p-1.5 text-muted-foreground transition-colors hover:text-foreground hover:bg-muted/50"
        title="getting started"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-question-mark"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
      </button>
      <button
        aria-label="open settings"
        class="flex items-center justify-center rounded p-1.5 text-muted-foreground transition-colors hover:text-foreground hover:bg-muted/50"
        title="settings (⌘,)"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-settings"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`snapshot — error states > App init error — BootSplash with error message 1`] = `
<div
  class="relative flex h-screen flex-col items-center justify-center gap-10 overflow-hidden bg-background text-foreground"
>
  <div
    aria-hidden="true"
    class="pointer-events-none absolute inset-0 -z-10"
    style="background-size: 18px 18px;"
  />
  <div
    aria-hidden="true"
    class="pointer-events-none absolute inset-0 -z-10"
  />
  <div
    class="flex flex-col items-center gap-5"
  >
    <div
      class="relative flex h-24 w-24 items-center justify-center text-primary"
    >
      <span
        aria-hidden="true"
        class="absolute inset-0 rounded-full motion-safe:animate-ping"
        style="animation-duration: 2.2s;"
      />
      <div
        class="relative flex h-full w-full items-center justify-center rounded-full bg-subtle ring-1 ring-border-soft"
        style="box-shadow: 0 0 50px oklch(from var(--color-primary) l c h / 0.25);"
      >
        <svg
          aria-hidden="true"
          class="text-primary motion-safe:animate-pulse"
          fill="currentColor"
          height="52"
          viewBox="0 0 24 24"
          width="52"
        >
          <path
            d="M9 8.5Q4.3 7.7 3 11.5Q2.5 15.5 4.8 17.3Q6.8 18.2 7.2 15.3Q6.7 12.5 6.3 10.3Q6 8.9 9 8.5Z"
          />
          <path
            d="M15 8.5Q19.7 7.7 21 11.5Q21.5 15.5 19.2 17.3Q17.2 18.2 16.8 15.3Q17.3 12.5 17.7 10.3Q18 8.9 15 8.5Z"
          />
          <path
            d="M7.5 13a4.5 5.1 0 1 0 9 0a4.5 5.1 0 1 0-9 0ZM9.3 12a1.1 1.1 0 1 0 2.2 0a1.1 1.1 0 1 0-2.2 0ZM12.5 12a1.1 1.1 0 1 0 2.2 0a1.1 1.1 0 1 0-2.2 0ZM10.7 14.4Q12 16.2 13.3 14.4Q12 13.7 10.7 14.4Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="flex flex-col items-center gap-0.5"
    >
      <span
        class="text-lg font-bold tracking-tight"
      >
        Goodboy
      </span>
      <span
        class="text-[11px] uppercase tracking-widest text-muted-foreground/60"
      >
        AI workspace orchestrator
      </span>
    </div>
  </div>
  <div
    class="flex w-64 flex-col gap-3 rounded-lg border border-danger/30 bg-danger/5 p-4 font-mono text-[11px]"
    role="alert"
  >
    <div
      class="flex flex-col gap-1"
    >
      <span
        class="text-danger"
      >
        ✗ 
        init
         failed
      </span>
      <p
        class="leading-relaxed text-danger/70"
      >
        database migration failed
      </p>
    </div>
    <div
      class="flex flex-col gap-1.5"
    >
      <button
        class="rounded border border-border px-3 py-1.5 text-muted-foreground motion-safe:transition-colors hover:bg-muted"
        type="button"
      >
        › open logs
      </button>
      <button
        class="text-left text-muted-foreground/60 underline-offset-2 hover:underline"
        type="button"
      >
        report on github ↗
      </button>
    </div>
  </div>
</div>
`;

exports[`snapshot — error states > BootSplash: boot-error phase 1`] = `
<div
  class="relative flex h-screen flex-col items-center justify-center gap-10 overflow-hidden bg-background text-foreground"
>
  <div
    aria-hidden="true"
    class="pointer-events-none absolute inset-0 -z-10"
    style="background-size: 18px 18px;"
  />
  <div
    aria-hidden="true"
    class="pointer-events-none absolute inset-0 -z-10"
  />
  <div
    class="flex flex-col items-center gap-5"
  >
    <div
      class="relative flex h-24 w-24 items-center justify-center text-primary"
    >
      <span
        aria-hidden="true"
        class="absolute inset-0 rounded-full motion-safe:animate-ping"
        style="animation-duration: 2.2s;"
      />
      <div
        class="relative flex h-full w-full items-center justify-center rounded-full bg-subtle ring-1 ring-border-soft"
        style="box-shadow: 0 0 50px oklch(from var(--color-primary) l c h / 0.25);"
      >
        <svg
          aria-hidden="true"
          class="text-primary motion-safe:animate-pulse"
          fill="currentColor"
          height="52"
          viewBox="0 0 24 24"
          width="52"
        >
          <path
            d="M9 8.5Q4.3 7.7 3 11.5Q2.5 15.5 4.8 17.3Q6.8 18.2 7.2 15.3Q6.7 12.5 6.3 10.3Q6 8.9 9 8.5Z"
          />
          <path
            d="M15 8.5Q19.7 7.7 21 11.5Q21.5 15.5 19.2 17.3Q17.2 18.2 16.8 15.3Q17.3 12.5 17.7 10.3Q18 8.9 15 8.5Z"
          />
          <path
            d="M7.5 13a4.5 5.1 0 1 0 9 0a4.5 5.1 0 1 0-9 0ZM9.3 12a1.1 1.1 0 1 0 2.2 0a1.1 1.1 0 1 0-2.2 0ZM12.5 12a1.1 1.1 0 1 0 2.2 0a1.1 1.1 0 1 0-2.2 0ZM10.7 14.4Q12 16.2 13.3 14.4Q12 13.7 10.7 14.4Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="flex flex-col items-center gap-0.5"
    >
      <span
        class="text-lg font-bold tracking-tight"
      >
        Goodboy
      </span>
      <span
        class="text-[11px] uppercase tracking-widest text-muted-foreground/60"
      >
        AI workspace orchestrator
      </span>
    </div>
  </div>
  <div
    class="flex w-64 flex-col gap-3 rounded-lg border border-danger/30 bg-danger/5 p-4 font-mono text-[11px]"
    role="alert"
  >
    <div
      class="flex flex-col gap-1"
    >
      <span
        class="text-danger"
      >
        ✗ 
        init
         failed
      </span>
      <p
        class="leading-relaxed text-danger/70"
      >
        detecting-cli failed
      </p>
    </div>
    <div
      class="flex flex-col gap-1.5"
    >
      <button
        class="rounded border border-border px-3 py-1.5 text-muted-foreground motion-safe:transition-colors hover:bg-muted"
        type="button"
      >
        › open logs
      </button>
      <button
        class="text-left text-muted-foreground/60 underline-offset-2 hover:underline"
        type="button"
      >
        report on github ↗
      </button>
    </div>
  </div>
</div>
`;

exports[`snapshot — error states > BudgetRulesPanel: form error 1`] = `
<div
  class="flex flex-col gap-3"
>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="text-xs font-semibold text-foreground"
    >
      Budget rules
    </div>
    <button
      class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 text-foreground hover:bg-muted h-7 px-2.5 text-xs"
      type="button"
    >
      Add rule
    </button>
  </div>
  <p
    class="text-xs text-muted-foreground"
  >
    No rules defined. Add one to cap monthly spend per provider.
  </p>
</div>
`;

exports[`snapshot — error states > EndSessionDialog: error state 1`] = `
<dialog
  aria-describedby="_r_2_-desc"
  aria-labelledby="_r_2_-title"
  class="overflow-hidden rounded-lg border border-border bg-background p-0 text-foreground shadow-xl"
  open=""
>
  <div
    class="flex flex-col max-h-[85vh] min-h-[16rem] w-[24rem]"
  >
    <header
      class="flex shrink-0 items-start justify-between gap-4 px-6 py-4"
    >
      <div
        class="flex min-w-0 flex-col gap-1"
      >
        <h2
          class="text-sm font-semibold tracking-tight text-foreground"
          id="_r_2_-title"
        >
          End session?
        </h2>
        <p
          class="text-xs leading-relaxed text-muted-foreground"
          id="_r_2_-desc"
        >
          The worktree directory will be removed. The branch is preserved for manual merge.
        </p>
      </div>
      <button
        aria-label="close"
        class="-mr-1 -mt-1 flex h-7 w-7 shrink-0 items-center justify-center rounded-md text-muted-foreground motion-safe:transition-colors hover:bg-muted hover:text-foreground"
        type="button"
      >
        <span
          aria-hidden="true"
          class="text-base leading-none"
        >
          ×
        </span>
      </button>
    </header>
    <div
      aria-orientation="horizontal"
      class="h-px w-full bg-gradient-to-r from-transparent via-border-soft to-transparent"
      role="separator"
    />
    <div
      class="flex min-h-0 flex-1 flex-col overflow-y-auto text-sm gap-4 px-6 py-5"
    >
      <div
        class="rounded-md border border-border-soft bg-subtle px-3 py-2 text-xs text-muted-foreground"
      >
        <span
          class="font-mono text-foreground"
        >
          test goal
        </span>
      </div>
    </div>
    <div
      aria-orientation="horizontal"
      class="h-px w-full bg-gradient-to-r from-transparent via-border-soft to-transparent"
      role="separator"
    />
    <footer
      class="flex shrink-0 items-center justify-end gap-2 px-6 py-3"
    >
      <button
        class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 text-foreground hover:bg-muted h-8 px-3 text-sm"
        type="button"
      >
        Cancel
      </button>
      <button
        class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 bg-danger text-danger-foreground hover:bg-danger/90 h-8 px-3 text-sm"
        type="button"
      >
        End session
      </button>
    </footer>
  </div>
</dialog>
`;

exports[`snapshot — error states > NewSessionDialog: form error 1`] = `
<dialog
  aria-describedby="_r_1_-desc"
  aria-labelledby="_r_1_-title"
  class="overflow-hidden rounded-lg border border-border bg-background p-0 text-foreground shadow-xl"
  open=""
>
  <div
    class="flex flex-col max-h-[85vh] min-h-[28rem] w-[44rem]"
  >
    <header
      class="flex shrink-0 items-start justify-between gap-4 px-6 py-4"
    >
      <div
        class="flex min-w-0 flex-col gap-1"
      >
        <h2
          class="text-sm font-semibold tracking-tight text-foreground"
          id="_r_1_-title"
        >
          New session
        </h2>
        <p
          class="text-xs leading-relaxed text-muted-foreground"
          id="_r_1_-desc"
        >
          Creates a worktree on a fresh branch. Configure workflow and agents from the session panel afterwards.
        </p>
      </div>
      <button
        aria-label="close"
        class="-mr-1 -mt-1 flex h-7 w-7 shrink-0 items-center justify-center rounded-md text-muted-foreground motion-safe:transition-colors hover:bg-muted hover:text-foreground"
        type="button"
      >
        <span
          aria-hidden="true"
          class="text-base leading-none"
        >
          ×
        </span>
      </button>
    </header>
    <div
      aria-orientation="horizontal"
      class="h-px w-full bg-gradient-to-r from-transparent via-border-soft to-transparent"
      role="separator"
    />
    <div
      class="flex min-h-0 flex-1 flex-col overflow-y-auto text-sm gap-4 px-6 py-5"
    >
      <div
        class="flex flex-col gap-7"
      >
        <section
          class="flex flex-col gap-2.5"
        >
          <header
            class="flex items-start gap-2.5"
          >
            <span
              class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-md bg-primary/10"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-target text-primary"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="2"
                />
              </svg>
            </span>
            <div
              class="flex flex-col gap-0.5"
            >
              <h3
                class="text-sm font-semibold text-foreground"
              >
                Goal
              </h3>
              <p
                class="text-2xs leading-relaxed text-muted-foreground"
              >
                What this session should accomplish. Be specific — agents lean on it for context.
              </p>
            </div>
          </header>
          <div>
            <textarea
              class="w-full rounded-md border border-border/30 bg-background px-2.5 py-2 text-sm leading-5 text-foreground shadow-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary/40 focus-visible:ring-1 focus-visible:ring-primary/15 disabled:opacity-50 resize-none transition-[border-color,box-shadow] focus-visible:shadow-md"
              placeholder="Refactor auth domain to extract token validation into a shared module…"
              style="overflow-y: hidden;"
            />
          </div>
        </section>
        <section
          class="flex flex-col gap-2.5"
        >
          <header
            class="flex items-start gap-2.5"
          >
            <span
              class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-md bg-success/10"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-git-branch text-success"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 6a9 9 0 0 0-9 9V3"
                />
                <circle
                  cx="18"
                  cy="6"
                  r="3"
                />
                <circle
                  cx="6"
                  cy="18"
                  r="3"
                />
              </svg>
            </span>
            <div
              class="flex flex-col gap-0.5"
            >
              <h3
                class="text-sm font-semibold text-foreground"
              >
                Branch
              </h3>
              <p
                class="text-2xs leading-relaxed text-muted-foreground"
              >
                Each session lives on its own git worktree. Pick a fresh branch or attach to an existing one.
              </p>
            </div>
          </header>
          <div>
            <div
              class="flex flex-col gap-2.5"
            >
              <div
                aria-label="branch source"
                class="inline-flex shrink-0 rounded border border-border bg-background p-0.5"
                role="tablist"
              >
                <button
                  aria-selected="true"
                  class="rounded px-2 py-0.5 text-2xs font-medium motion-safe:transition-colors bg-muted text-foreground shadow-sm"
                  role="tab"
                  type="button"
                >
                  New
                </button>
                <button
                  aria-selected="false"
                  class="rounded px-2 py-0.5 text-2xs font-medium motion-safe:transition-colors text-muted-foreground hover:text-foreground"
                  role="tab"
                  type="button"
                >
                  Existing
                </button>
              </div>
              <div
                class="flex items-center gap-1.5"
              >
                <span
                  class="shrink-0 text-xs text-muted-foreground font-mono"
                >
                  kay/
                </span>
                <input
                  aria-label="Branch slug"
                  autocapitalize="off"
                  autocorrect="off"
                  class="w-full rounded-md border border-border bg-background px-2.5 text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 disabled:opacity-50 h-8 flex-1 font-mono text-sm"
                  placeholder="branch-slug"
                  spellcheck="false"
                  type="text"
                  value=""
                />
                <button
                  aria-label="Generate branch name"
                  class="shrink-0 rounded-md border border-border px-2 py-1.5 text-xs transition-colors cursor-not-allowed text-muted-foreground/30"
                  disabled=""
                  title="Generate from goal"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-wand-sparkles"
                    fill="none"
                    height="13"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="13"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"
                    />
                    <path
                      d="m14 7 3 3"
                    />
                    <path
                      d="M5 6v4"
                    />
                    <path
                      d="M19 14v4"
                    />
                    <path
                      d="M10 2v2"
                    />
                    <path
                      d="M7 8H3"
                    />
                    <path
                      d="M21 16h-4"
                    />
                    <path
                      d="M11 3H9"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      aria-orientation="horizontal"
      class="h-px w-full bg-gradient-to-r from-transparent via-border-soft to-transparent"
      role="separator"
    />
    <footer
      class="flex shrink-0 items-center justify-end gap-2 px-6 py-3"
    >
      <div
        class="flex w-full items-center gap-2"
      >
        <div
          class="flex-1 text-xs text-danger"
        />
        <button
          class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 text-foreground hover:bg-muted h-8 px-3 text-sm"
          type="button"
        >
          Cancel
        </button>
        <button
          class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 bg-primary text-primary-foreground hover:bg-primary/90 h-8 px-3 text-sm"
          disabled=""
          type="button"
        >
          Create session
        </button>
      </div>
    </footer>
  </div>
</dialog>
`;

exports[`snapshot — error states > ProvidersPanel: provider in error state 1`] = `
<div
  class="flex flex-col gap-3"
>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="text-xs font-semibold text-foreground"
    >
      Providers
    </div>
    <span
      class="relative inline-flex"
    >
      <button
        aria-label="Re-detect installed CLIs"
        class="inline-flex h-7 w-7 items-center justify-center rounded-md text-muted-foreground hover:bg-muted hover:text-foreground disabled:opacity-50"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-rotate-cw"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-9-9c2.52 0 4.93 1 6.74 2.74L21 8"
          />
          <path
            d="M21 3v5h-5"
          />
        </svg>
      </button>
    </span>
  </div>
  <div
    class="grid grid-cols-3 gap-2.5"
  >
    <div
      class="relative flex flex-col items-center gap-2 rounded-lg border bg-subtle p-3 shadow-sm transition-colors"
    >
      <span
        class="relative inline-flex"
      >
        <span
          aria-hidden="true"
          class="absolute left-2.5 top-2.5 inline-block h-1.5 w-1.5 shrink-0 rounded-full bg-danger"
        />
      </span>
      <div
        aria-hidden="true"
        class="mt-1 flex h-10 w-10 items-center justify-center rounded-full transition-opacity"
        style="color: var(--color-provider-anthropic);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sparkles"
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
          />
          <path
            d="M20 2v4"
          />
          <path
            d="M22 4h-4"
          />
          <circle
            cx="4"
            cy="20"
            r="2"
          />
        </svg>
      </div>
      <div
        class="flex flex-col items-center gap-0.5"
      >
        <span
          class="text-sm font-semibold lowercase"
        >
          claude
        </span>
        <span
          class="text-2xs text-muted-foreground"
        >
          1.0.0
        </span>
      </div>
      <div
        class="line-clamp-2 text-center text-2xs text-danger"
        title="unknown error"
      >
        unknown error
      </div>
      <div
        class="mt-1 w-full"
      >
        <button
          class="block w-full rounded-md border border-border-soft py-1.5 text-center text-xs hover:bg-muted"
          type="button"
        >
          Retry
        </button>
      </div>
    </div>
  </div>
  <div
    class="flex items-start gap-1.5 text-2xs text-muted-foreground"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-info mt-0.5 shrink-0"
      fill="none"
      height="11"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="11"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M12 16v-4"
      />
      <path
        d="M12 8h.01"
      />
    </svg>
    <span>
      Sign in once via each provider's CLI (e.g. run
       
      <code
        class="rounded bg-muted px-1"
      >
        claude
      </code>
       in a terminal). Goodboy picks up the credentials.
    </span>
  </div>
</div>
`;

exports[`snapshot — error states > TranscriptCard: turn error item 1`] = `
<div
  class="rounded-md border border-danger/40 bg-danger/5 px-3 py-2 text-sm text-danger"
>
  provider failed to respond
</div>
`;
